fix style with dashboard sidenav collapse

--- a/app/assets/stylesheets/dashboard.sass
+++ b/app/assets/stylesheets/dashboard.sass
@@ -1,11 +1,13 @@
 body.dashboard
-  #dashboard-page-title
-    float: left
-    h1
-      margin: 18px 0
-      font-size: 1.5em
-      font-weight: 400
-      font-style: italic
+  nav.navbar-fixed
+    z-index: 2
+    #dashboard-page-title
+      float: left
+      h1
+        margin: 18px 0
+        font-size: 1.5em
+        font-weight: 400
+        font-style: italic
   .main-content
     padding-top: 90px
   .list-styles
